--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -3,6 +3,6 @@
     <form action="/answer">
         <label for="user-question">Type your question: </label>
         <input type="text" name="question" id="user-question" placeholder="Ask!" required> 
-        <input type="submit" class="btn-back">
+        <input type="submit" name="ask" class="btn-back">
     </form>
 </div>
